Fixing Course Module Page Top details are not visible because issue (#26)
* Navigation Bar Animation

* Fixing Error #25

--- a/Course Modules/style-courseModule.css
+++ b/Course Modules/style-courseModule.css
@@ -14,11 +14,21 @@ p {
 .container {
     width: 100px;
     height: 100px;
-    margin-left: 75%;
-    margin-top: 190px;
+    margin-left: 400px;
+    margin-top: 100px;
 }
 
-table{
-    margin-top: 50px;
-    border: 1px;
+.table {
+    width: 100%;
+    border-collapse: collapse;
+}
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+th, td {
+    border: 0px solid #dddddd;
+    text-align: left;
+    padding: 15px;
+    white-space: nowrap;
 }
